date fns cdn updated

--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
     </form>
   </div>
 
-  <script src="http://cdn.date-fns.org/v1.9.0/date_fns.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/date-fns/1.30.1/date_fns.js" integrity="sha512-ZV3aKX6eFgm3To1hmxEyuh4dLtR1ovVeiz0auNstFXOcuwIcC6rBHGUP2lAmdUZb66yBj/mVborw4HhDkbvrhw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <!-- <script src="http://cdn.date-fns.org/v1.9.0/date_fns.min.js"></script> -->
   <script src="https://www.gstatic.com/firebasejs/5.8.4/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/5.8.4/firebase-firestore.js"></script>
   <script>
