--- a/index.html
+++ b/index.html
@@ -57,15 +57,25 @@
   <script>
     // Initialize Firebase
 
-    const config = {
-      apiKey: "AIzaSyCeUmPFqWNLcz41EDFzJZZAt_wxTtLPJfo",
-      authDomain: "js-tute.firebaseapp.com",
-      projectId: "js-tute",
-      storageBucket: "js-tute.appspot.com",
-      messagingSenderId: "557969571152",
-      appId: "1:557969571152:web:0af17b1e4d53856fbe4055",
-      measurementId: "G-TDT5QG9TM8"
-    };
+//     const config = {
+//       apiKey: "AIzaSyCeUmPFqWNLcz41EDFzJZZAt_wxTtLPJfo",
+//       authDomain: "js-tute.firebaseapp.com",
+//       projectId: "js-tute",
+//       storageBucket: "js-tute.appspot.com",
+//       messagingSenderId: "557969571152",
+//       appId: "1:557969571152:web:0af17b1e4d53856fbe4055",
+//       measurementId: "G-TDT5QG9TM8"
+//     };
+    
+    const firebaseConfig = {
+  apiKey: "AIzaSyAuw1I9wltVtz3L4DkUAAVORkl7XtdcWHw",
+  authDomain: "chat-system-d5adf.firebaseapp.com",
+  projectId: "chat-system-d5adf",
+  storageBucket: "chat-system-d5adf.appspot.com",
+  messagingSenderId: "892453066395",
+  appId: "1:892453066395:web:50ddeeb1f9885bda7bd83e"
+};
+    
     firebase.initializeApp(config);
     const db = firebase.firestore();
   </script>
