--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 //       measurementId: "G-TDT5QG9TM8"
 //     };
     
-    const firebaseConfig = {
+    const config = {
   apiKey: "AIzaSyAuw1I9wltVtz3L4DkUAAVORkl7XtdcWHw",
   authDomain: "chat-system-d5adf.firebaseapp.com",
   projectId: "chat-system-d5adf",
